Reorganized project structure

--- a/simvo.html
+++ b/simvo.html
@@ -1,4 +1,8 @@
 <html>
+	<head>
+		<title>Joshua's Web Page</title>
+		<link rel="stylesheet" href="titlesection/titlesection.css">
+	</head>
 	<body>
 		<div id="title">
 		<h1> Welcome to Joshua's Web page</h1>
@@ -13,24 +17,6 @@
 Body {
 background-image: url("https://tse4.mm.bing.net/th/id/OIP.iIConyhxeRP-AbIOmgaOpgAAAA?pid=ImgDet&w=207&h=138&c=7&dpr=1.5&o=7&rm=3");
 Background-size: cover;
-
-}
-
-h1 {
-	color: blue;
-}
-
-button:hover {
-	background-color: red;
-	cursor: pointer;
-	font-size: 20px;
-}
-
-
-#title {
-width: 100%;
-text-align: center;
-margin-top: 50px;
 }
 </style>
 
