--- a/simvo.html
+++ b/simvo.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="titlesection/titlesection.css">
 	</head>
 	<body>
-		<div id="title">
+		<div class="main-section" id="title">
 		<h1> Welcome to Joshua's Web page</h1>
 		<p>This is where dreams come true</p>
 		<button onclick = "makeDreamComeTrue()">make dream come true</button>
@@ -17,6 +17,9 @@
 Body {
 background-image: url("https://tse4.mm.bing.net/th/id/OIP.iIConyhxeRP-AbIOmgaOpgAAAA?pid=ImgDet&w=207&h=138&c=7&dpr=1.5&o=7&rm=3");
 Background-size: cover;
+}
+.main-section {
+	border: solid white 1px;
 }
 </style>
 
