--- a/simvo.html
+++ b/simvo.html
@@ -19,6 +19,8 @@ background-image: url("https://tse4.mm.bing.net/th/id/OIP.iIConyhxeRP-AbIOmgaOpg
 Background-size: cover;
 }
 .main-section {
+	width: 100vw;
+	height: 100vh;
 	border: solid white 1px;
 }
 </style>
