Implemented CSS Reset

--- a/simvo.html
+++ b/simvo.html
@@ -13,8 +13,11 @@
 </html>
 
 <style>
-
-Body {
+html, body {
+margin: 0px;
+padding: 0px;
+}
+body {
 background-image: url("https://tse4.mm.bing.net/th/id/OIP.iIConyhxeRP-AbIOmgaOpgAAAA?pid=ImgDet&w=207&h=138&c=7&dpr=1.5&o=7&rm=3");
 Background-size: cover;
 }
