Updated fonts type

--- a/simvo.html
+++ b/simvo.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Joshua's Web Page</title>
 		<link rel="stylesheet" href="titlesection/titlesection.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Handlee&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
+		<link rel="stylesheet" <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Happy+Monkey&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
 	</head>
 	<body>
 		<div class="main-section" id="title">
@@ -16,7 +16,7 @@
 <style>
 * {
 box-sizing: border-box;
-font-family: Handlee;
+font-family: "Happy Monkey",
 }
 html, body {
 margin: 0px;
