--- a/simvo.html
+++ b/simvo.html
@@ -8,7 +8,7 @@
 		<div class="main-section" id="title">
 		<h1> Welcome to Joshua's Web page</h1>
 		<p>This is where dreams come true</p>
-		<button onclick = "makeDreamComeTrue()">make dream come true</button>
+		<button class="title-section-button" onclick = "makeDreamComeTrue()">make dream come true</button>
 		</div>
 	</body>
 </html>
