--- a/simvo.html
+++ b/simvo.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<div class="main-section" id="title">
-		<h1> Welcome to Joshua's Web page</h1>
-		<p>This is where dreams come true</p>
+		<h1 class="title-section-header"> Welcome to Joshua's Web page</h1>
+		<p class="title-section-subtitle">This is where dreams come true</p>
 		<button class="title-section-button" onclick = "makeDreamComeTrue()">make dream come true</button>
 		</div>
 	</body>
@@ -26,6 +26,7 @@ padding: 0px;
 	width: 100vw;
 	height: 100vh;
 	Background-size: cover;
+	padding: 25px;
 }
 </style>
 
