Added icons to About Me section

--- a/simvo.html
+++ b/simvo.html
@@ -3,7 +3,8 @@
 		<title>Joshua's Web Page</title>
 		<link rel="stylesheet" href="./titlesection/titlesection.css">
 		<link rel="stylesheet" href="./aboutmesection/aboutme.css">
-		<link rel="stylesheet" <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Happy+Monkey&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Handlee&family=Happy+Monkey&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 	</head>
 	<body>
 		<div class="main-section" id="title">
@@ -19,6 +20,12 @@
 					I love coding and learning new things.
 					This is my personal webpage where I share my projects and ideas.
 					Feel free to explore and reach out to me!</p>
+			</div>
+			<div class="aboutme-icons">
+				<i class="aboutme-icon fa-brands fa-linkedin"></i>
+				<i class="aboutme-icon fa-brands fa-x-twitter"></i>
+				<i class="aboutme-icon fa-solid fa-envelope"></i>
+				<i class="aboutme-icon fa-brands fa-square-github"></i>
 			</div>
 		</div>
 	</body>
@@ -42,7 +49,7 @@ padding: 0px;
 
 .misc-section {
 	width: 100vw;
-	padding: 100px 25px;
+	padding: 120px 25px;
 }
 .text-block-container{
 	width: 65%;
