Added links to icon and CV download

--- a/simvo.html
+++ b/simvo.html
@@ -20,12 +20,26 @@
 					I love coding and learning new things.
 					This is my personal webpage where I share my projects and ideas.
 					Feel free to explore and reach out to me!</p>
-			</div>
-			<div class="aboutme-icons">
-				<i class="aboutme-icon fa-brands fa-linkedin"></i>
-				<i class="aboutme-icon fa-brands fa-x-twitter"></i>
-				<i class="aboutme-icon fa-solid fa-envelope"></i>
-				<i class="aboutme-icon fa-brands fa-square-github"></i>
+					
+					<div class="aboutme-icons">
+						<a href="https://www.linkedin.com/in/joshua-valentine-8336731b6/" target="_blank">
+							<i class="aboutme-icon fa-brands fa-linkedin"></i>
+						</a>
+						<a href="https://x.com/0xjosval" target="_blank">
+							<i class="aboutme-icon fa-brands fa-x-twitter"></i>
+						</a>
+						<a href="mailto:akalihujoshua@gmail.com" target="_blank">
+							<i class="aboutme-icon fa-solid fa-envelope"></i>
+						</a>
+						<a href="https://github.com/AVJoshua/" target="_blank">
+							<i class="aboutme-icon fa-brands fa-square-github"></i>
+						</a>
+					</div>
+					<div class="aboutme-download-link">
+						<a href="./aboutmesection/Joshua_Akalihu_CV(pdf).pdf" download target="_blank">
+							Download My CV
+						</a>
+					</div>
 			</div>
 		</div>
 	</body>
