Created Craps Game

--- a/simvo.html
+++ b/simvo.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Joshua's Web Page</title>
+		<link rel="stylesheet" href="./crapsgame/crapsgame.css">
 		<link rel="stylesheet" href="./titlesection/titlesection.css">
 		<link rel="stylesheet" href="./aboutmesection/aboutme.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Handlee&family=Happy+Monkey&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap">
@@ -40,6 +41,12 @@
 							Download My CV
 						</a>
 					</div>
+			</div>
+		</div>
+		<div class="main-section" id="craps-game">
+			<h1 class="craps-game-title">Craps Casino Game</h1>
+			<div class="craps-game-container">
+
 			</div>
 		</div>
 	</body>
