--- a/simvo.html
+++ b/simvo.html
@@ -46,6 +46,17 @@
 		<div class="main-section" id="craps-game">
 			<h1 class="craps-game-title">Craps Casino Game</h1>
 			<div class="craps-game-container">
+				<div class="craps-registration-pane">
+					<div>
+						Enter username to begin
+					</div>
+					<div>
+						<input class="craps-registration-input" id="craps-username-input">
+					</div>
+					<div class="craps-registration-continue" onclick="registerCrapsPlayer()">
+						Continue
+					</div>
+				</div>
 
 			</div>
 		</div>
@@ -89,4 +100,11 @@ function makeDreamComeTrue() {
 document.body.style.background = 'url("https://www.bing.com/th/id/OGC.bd947bb7c9850d83d1c2520f2762d949?o=7&pid=1.7&rm=3&rurl=https%3a%2f%2fvignette.wikia.nocookie.net%2fcamphalfbloodroleplay%2fimages%2fb%2fb7%2fTumblr_static_explosion_gif.gif%2frevision%2flatest%3fcb%3d20130613172315&ehk=xswn5CPWX88yV5jmY5zl2wVZHf5iYPaGja2w7VQLDos%3d")'
 document.getElementById("title").style.visibility = "hidden";
 }
+
+function registerCrapsPlayer() {
+	let crapsUsername =	document.getElementById("craps-username-input").value
+	
+}
+
+
 </script>
