Created Craps Game javaScript module

--- a/simvo.html
+++ b/simvo.html
@@ -46,7 +46,7 @@
 		<div class="main-section" id="craps-game">
 			<h1 class="craps-game-title">Craps Casino Game</h1>
 			<div class="craps-game-container">
-				<div class="craps-registration-pane">
+				<div id="craps-registration-pane">
 					<div>
 						Enter username to begin
 					</div>
@@ -57,7 +57,9 @@
 						Continue
 					</div>
 				</div>
-
+				<div id="craps-main-section">
+					Main SECTION HERE
+				</div>
 			</div>
 		</div>
 	</body>
@@ -93,7 +95,7 @@ padding: 0px;
 	}
 }
 </style>
-
+<script src="./crapsgame/crapsgame.js"></script>
 <script>
 function makeDreamComeTrue() {
 //alert("Dreams came true!!");
@@ -101,10 +103,6 @@ document.body.style.background = 'url("https://www.bing.com/th/id/OGC.bd947bb7c9
 document.getElementById("title").style.visibility = "hidden";
 }
 
-function registerCrapsPlayer() {
-	let crapsUsername =	document.getElementById("craps-username-input").value
-	
-}
 
 
 </script>
