Added variables to track user rounds and money

--- a/mypage.html
+++ b/mypage.html
@@ -63,7 +63,7 @@
 							Welcome, <span id="craps-stats-username"></span>
 						</div>
 						<div id="craps-stats-money-container">
-							<span id="craps-stats-money">$</span>
+							$<span id="craps-stats-money"></span>
 						</div>
 						<div>
 							Rounds: <span id="craps-stats-rounds"></span>
