--- a/mypage.html
+++ b/mypage.html
@@ -71,7 +71,8 @@
 						</div>
 					</div>
 					<div class="craps-on-table-container">
-						<div class="craps-roll-dice-container no-select">ROLL DICE <i class="fa-solid fa-dice"></i></div>
+						<div id="roll-dice-button" class="craps-roll-dice-container no-select" onclick="rollDice()">ROLL DICE <i class="fa-solid fa-dice"></i></div>
+						<div id="craps-roll-dice-animation-container"></div>
 					</div>
 					<div class="craps-round-manager no-select">
 						<div class="craps-betting-grid">
@@ -126,6 +127,7 @@ padding: 0px;
 }
 </style>
 <script src="./crapsgame/crapsgame.js"></script>
+<script type="text/javascript" src="https://unpkg.com/roll-a-die@2.0.1/dist/roll-a-die.js"></script>
 <script>
 function makeDreamComeTrue() {
 //alert("Dreams came true!!");
